--- a/package.json
+++ b/package.json
@@ -7,7 +7,13 @@
     "dev": "nodemon"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "knex": "^0.21.1",
+    "mysql": "^2.18.1",
+    "pg": "^8.0.3",
+    "postgres": "^1.0.2",
+    "sqlite3": "^4.2.0",
     "uuidv4": "^6.0.8"
   },
   "devDependencies": {
